<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Currents</string>
    <string name="developer_concept">Concept &amp; Developed by</string>
    <string name="developer_dept">Department of ICT</string>
    <string name="developer_faculty">Faculty of Technology, University of Colombo</string>
    <string name="app_version">V.1.0.0.1</string>
    <string name="splash_uni_logo">University Logo</string>
    <string name="splash_tagline">The official news broadcaster of faculty of technology</string>
    <string name="login_welcome">Hello, welcome back</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="checking">Checking...</string>
    <string name="no_account_found">No account found with this email</string>
    <string name="forgot_password_error">"Error checking email: "</string>
    <string name="email_sent_to">Password reset link sent to</string>
    <string name="email_sent_failed">Failed to send reset email: </string>
    <string name="request_link">Request Reset Link</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_success">Login Successful</string>
    <string name="signup_instructions">Just have to quick things to get started</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="username_hint">Username</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="create_account_title">Create Account</string>
    <string name="create_account_message">Are you sure want to create account now?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_instructions">Please enter your email address to authenticate</string>
    <string name="request_otp_button">Request OTP</string>
    <string name="back_to_login">Back to Login</string>
    <string name="all">All</string>
    <string name="sports">Sports</string>
    <string name="academic">Academic</string>
    <string name="events">Events</string>
    <string name="search_hint">Search</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="developed_by">Developed by</string>
    <string name="developer_name">Pubudu Ishan Wickrama Arachchi</string>
    <string name="developer_student_id_label">Student Reg.No</string>
    <string name="developer_student_id">2020t00876</string>
    <string name="developer_email">2020t00876@stu.cmb.ac.lk</string>
    <string name="developer_github_label">GitHub Profile</string>
    <string name="developer_github">pubuduishandev</string>
    <string name="developer_linkedin_label">LinkedIn Profile</string>
    <string name="developer_linkedin">pubuduishandigital</string>
    <string name="user_profile_avatar">PI</string>
    <string name="user_name">Pubudu Ishan</string>
    <string name="personal_info_header">PERSONAL INFORMATION</string>
    <string name="full_name_label">Full Name</string>">
    <string name="full_name">Pubudu Ishan</string>
    <string name="email">2020t00876@stu.cmb.ac.lk</string>
    <string name="username">pubuduishan</string>
    <string name="warning_message">Your account was created with this email, so it cannot be edited here.</string>
    <string name="privacy_and_security_header">PRIVACY AND SECURITY</string>
    <string name="password_changed_time">Changed one month ago</string>
    <string name="change_password_instructions">Please verify user before change password. Enter your current password here</string>
    <string name="news_title">News Article Title</string>
    <string name="news_image_placeholder">News Image</string>
    <string name="sample_news_content">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="posted_date">Posted Date</string>
    <string name="news_source">News Source</string>
    <string name="change_password_title">Change Password</string>
    <string name="old_password_hint">Old Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="cancel_button">Cancel</string>
    <string name="submit_button">OK</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="profile_updated_success">Profile updated successfully</string>
    <string name="profile_update_error">Error updating profile</string>
    <string name="error_user_not_found">User not found</string>
    <string name="logout_success">Logout Successful</string>
    <string name="password_change">Click to change password</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="delete_account_message">Are you sure want to delete your account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_account_success">Account deleted successfully</string>
    <string name="delete_account_error">Error deleting account</string>
    <string name="feedback_title">Share your feedback</string>
    <string name="feedback_instructions">What is your opinion of Currents?</string>
    <string name="feedback_placeholder">Place your feedback here</string>
    <string name="feedback_submit_button">Send your feedback</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_edit">Edit Profile</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_read_aloud">Read Aloud</string>
    <string name="menu_clear_bookmarks">Clear all Bookmarks</string>
    <string name="user_not_registered_title">User Not Registered</string>
    <string name="user_not_registered_message">This email address is not registered. Would you like to create a new account?</string>
    <string name="no_saved_news">No Saved News</string>
    <string name="no_saved_news_message">Looks like no any saved articles yet.</string>
    <string name="failed_to_load_bookmarks">Failed to load bookmarks</string>
    <string name="logging_error_bookmarks">Please log in to bookmark news.</string>
    <string name="article_missing">Cannot bookmark: News article ID is missing.</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="bookmark_remove_error">Failed to remove bookmark</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_add_error">Failed to add bookmark</string>
    <string name="reading_aloud">Reading news aloud</string>
    <string name="already_reading">Already reading</string>
    <string name="content_error">No content to read</string>
    <string name="reading_stopped">Reading stopped</string>
    <string name="saved_article_error">Please log in to see your saved articles</string>
    <string name="failed_to_clear_all_bookmarks">Cannot clear bookmarks: user not logged in</string>
    <string name="failed_to_bookmark_remove">Failed to clear saved articles: </string>
    <string name="failed_to_fetch_clear_bookmark">Failed to fetch bookmarks to clear</string>
    <string name="no_news">News not available</string>
    <string name="user_not_found">User profile not found</string>
    <string name="error_fetching_profile">Error fetching user profile: </string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="user_not_registered">User not registered</string>
    <string name="sign_up_success">Account created! Verification email sent to </string>
    <string name="sign_up_error">Account creation failed</string>
    <string name="creating_account">Creating Account...</string>
    <string name="no_user_found">No user logged in to delete</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_confirmation_message">Are you sure want to sign out now?</string>
</resources>